--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="hobby-list">
         <li>💻 Web Development</li>
         <li>📚 Reading Tech Blogs</li>
-        <li>🎨 Digital Designing</li>
+        <li>🎨 Coding</li>
       </ul>
     </section>
   </main>
